kubernetes/infrastructure/cdi/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdi-uploadproxy-external
  namespace: cdi
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: default-insecure-transport@kubernetescrd
spec:
  type: ClusterIP
  selector:
    cdi.kubevirt.io: cdi-uploadproxy
  ports:
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdi-uploadproxy-ingress
  namespace: cdi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cdi.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdi-uploadproxy-external
                port:
                  number: 443
